# rami

./: .dockerignore  .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODO.md  pyproject.toml
.github/workflows/: docker-publish.yml
mockups/: index.html
src/rami/: __init__.py  main.py
src/rami/api/: v1.py
src/rami/core/: config.py  exceptions.py  logging.py
src/rami/game/: __init__.py  ai.py  cards.py  contracts.py  engine.py  intents.py  melds.py  scoring.py  state.py
src/rami/realtime/: connections.py  protocol.py  ws.py
src/rami/tables/: dependencies.py  manager.py  router.py  schemas.py
tests/: conftest.py  test_ai.py  test_cards_melds.py  test_contracts.py  test_engine.py  test_transport.py
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  i18n.ts  index.css  store.ts  types.ts
web/src/components/: Dialogs.tsx  GameTable.tsx  Help.tsx  Home.tsx  Lobby.tsx  MeldPicker.tsx  PlayingCard.tsx  Scoreboard.tsx  Table.tsx  VersionBadge.tsx
web/src/components/ui/: button.tsx
web/src/lib/: api.ts  melds.ts
