[project]
name = "rami"
version = "0.1.3"
description = "Online multiplayer Rami Portugais (Portuguese Rummy)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "python-json-logger>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "commitizen>=3.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rami"]


# ---------------------------------------------------------------------
# Commitizen — conventional commits + version bump/tag (v-prefixed tags
# drive .github/workflows/docker-publish.yml)
# ---------------------------------------------------------------------

[tool.commitizen]
version = "0.1.3"
tag_format = "v$major.$minor.$patch$prerelease"
bump_message = "release $current_version -> $new_version [skip ci]"
changelog_file = "CHANGELOG.md"
version_files = [
    "pyproject.toml:^version",
]


# ---------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "UP",              # pyupgrade
    "B",               # bugbear
    "C4",              # comprehensions
    "SIM",             # simplify
    "PT",              # pytest-style
    "RUF",             # ruff-native
    "ASYNC",           # async pitfalls
]
ignore = [
    "E501",            # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]


# ---------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true


# ---------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
